2011-07-06  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R: add focus method for windows. Focusing a window
	raises window, focusing control gives that control the focus.

	* R/gimage.R: added digest call to file name to eliminate spaces
	(Thanks Erich)

2011-07-05  verzani  <verzani@gauss>

	* R/ghtml.R: added ghtml stub

	* R/gdroplist.R: fix to svalue<- so that event handlers are
	called. (Thanks Yves).

	fix to [ method-- return character(0), not NA when no selection

	* R/gcheckbox.R: fix to enabled<- and gcheckbox (Thanks Yves)

	* R/gfile.R: forgot call of tclvalue. Thanks Richie!

2011-07-03  John Verzani  <jverzani@gmail.com>

	* R/gdroplist.R: issue with select and n=1, changed
	condition. Thanks Erich

2011-06-16  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/aaaR5classes.R: fix to savlue and gradio. Thanks Richie!

2011-06-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: fix to widget when single item with
	spaces. (Thanks Richie!)

2011-04-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdialogs.R (onCancel): added event handler for window delete
	event with gbasicdialog -- should fix hang in windows (Thanks Erich)

2011-04-08  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gedit.R: didn't have width argument acted on. Thanks Erich!

2011-04-03  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtoolbar.R: Fix to this -- had double window being
	created. Thanks Erich!

	* R/gdf.R: Fix bug with fontsize (thanks Carlos!)

2011-02-18  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: change to how selected= argument handled. Can be
	a string with one of the values now.

2011-01-19  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gwindow.R (addHandlerDestroy): fixed issue with destroy
	call (the default handler). Also cleaned up addHanderUnrealize
	method. (Thanks again to Richie C.)
