@@ -1,3 +1,8 @@
+2011-07-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/aaaGenerics.R: changed default for fill for ggroup, gframe,
+	gexpandgour -- uses fill in dirction opposite of packing
+
 2011-07-06  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/gwindow.R: add focus method for windows. Focusing a window
